# photasa-app

./: .audit-ci.json  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.json  .mcp.json  .npmrc  .prettierrc  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_GUIDE.md  README.md  ROADMAP.md  TASK_TRACKING.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  jest.config.js  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.web.json  turbo.json  use_npm_install.md  vitest.config.ts  vitest.main.config.ts  vitest.preload.config.ts
.agent/cheat-sheets/: zouwu-workflow-reference.md
.claude/: settings.local.json
.claude/agents/: api-documenter.md  prompt-engineer.md
.cursor/: mcp.json
.cursor/rules/: Review-Gate2.mdc  personality.mdc  photasa-tauri-nonblocking-ipc.mdc  rfc-agent.mdc  typescript.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: rfc-implementation.md
.github/PULL_REQUEST_TEMPLATE/: rfc.md
.github/workflows/: build-matrix.yml  photasa-build.yml  release.yml  upload-release-assets.yml
.husky/: pre-commit  pre-push
.spec/: ROADMAP.md
.spec/rfc/: 0004-ai-file-preview-service.md  0004-local-design-file-preview-rust.md  0010-folder-statistics-display.md  0020-auto-update-server.md  0023-startup-performance-optimization.md  0029-scan-skip-strategy-completion-fix.md  0032-qianliyan-scan-engine.md  0033-shunfenger-watch-engine.md  0043-useqinqiong-access-pattern.md  0044-remove-compute-delta-anti-pattern.md  0050-taiyi-workflow-adapter-engine.md  0058-zhangsunwuji-menu-service.md  0067-tauri-app-photasa.md  0068-tauri-scan-service-migration.md  0069-tauri-thumbnail-service-migration.md  0070-tauri-import-service-migration.md  0071-tauri-config-service-migration.md  0072-tauri-tianshu-service-migration.md  0073-tauri-ui-migration-adapter.md  0097-tauri-legacy-api-deferred-surface.md  0098-main-module-extraction-to-packages.md  0104-tauri-execute-import-date-folder.md  0105-tauri-scan-incremental-cache.md  0106-tauri-update-periodic-check.md  0107-tauri-wenchang-preferences-storage.md  0111-tauri-scan-notify-status-bridge.md  0112-tauri-extract-metadata-golden-parity.md  0114-tauri-get-directory-os-paths.md  (+39 more)
app/: app.js  index.html  router.js
apps/photasa/src-tauri/: Cargo.toml  Info.dev.plist  UPDATER.md  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json
apps/photasa/src-tauri/capabilities/: default.json
apps/photasa/src-tauri/icons/: icon.icns
apps/photasa/src-tauri/icons-dev/: icon.icns
apps/photasa/src-tauri/scripts/: generate-metadata-fixtures.py
apps/photasa/src-tauri/src/: lib.rs  macos_display_name.rs  main.rs
apps/photasa/src-tauri/src/adapters/: config_adapter.rs  mod.rs  preferences_adapter.rs  scan_adapter.rs  siming_adapter.rs  taibaijinxing_adapter.rs  taiyi_adapter.rs
apps/photasa/src-tauri/src/commands/: config.rs  directory.rs  engine_status.rs  extract_metadata.rs  extract_metadata_exif.rs  extract_metadata_video.rs  ffmpeg_next_util.rs  folder_tree.rs  import_date_util.rs  import_execute.rs  import_file_groups.rs  import_legacy.rs  import_path_filter.rs  import_preview.rs  import_scan_directories.rs  import_session_store.rs  log_toggle_shortcut.rs  log_viewer.rs  menu.rs  metadata_golden.rs  mod.rs  path.rs  photasa_config.rs  platform.rs  preferences.rs  scan_cache.rs  scan_cleanup.rs  scan_media.rs  scan_notify.rs  scan_queue.rs  scan_runner.rs  scan_strategy.rs  shell.rs  siming.rs  splash_bridge.rs  stubs.rs  thumbnail.rs  thumbnail_placeholder.rs  update.rs  update_config.rs  (+5 more)
apps/photasa/src-tauri/src/services/: mod.rs  tianshu.rs
apps/photasa/src-tauri/src/utils/: mod.rs  scan_queue_ack.rs  scan_queue_error.rs  scan_queue_persist.rs  scan_queue_repository.rs  scan_queue_storage.rs  wasm.rs
apps/photasa/src-tauri/tests/fixtures/metadata/: README.md
apps/photasa/src-tauri/tests/fixtures/metadata/golden/: canon-exif-sample.json  corrupt-video.json  minimal-no-exif.json  missing-file.json  nikon-exif-sample.json  sample-video.json  sony-exif-sample.json
config/: environment.js
coverage/: clover.xml  coverage-final.json  lcov.info
crates/photasa-config/: Cargo.toml
crates/photasa-config/src/: lib.rs
crates/photasa-folder-tree/: Cargo.toml
crates/photasa-folder-tree/src/: lib.rs
crates/photasa-import/: Cargo.toml
crates/photasa-import/src/: copy_loop.rs  date.rs  file_groups.rs  legacy_loop.rs  lib.rs  metadata.rs  path_filter.rs  session.rs
crates/photasa-preference/: Cargo.toml
crates/photasa-scan/: Cargo.toml
crates/photasa-scan/src/: cache.rs  cleanup.rs  lib.rs  media.rs  notify.rs  sink.rs  strategy.rs
crates/photasa-scan/tests/: api.rs
crates/photasa-thumbnail/: Cargo.toml
crates/photasa-thumbnail/src/: exif.rs  lib.rs  placeholder.rs  thumbnail.rs  video.rs
crates/photasa-thumbnail/tests/: async_api.rs
crates/photasa-watch/: Cargo.toml
crates/photasa-watch/src/: coalescer.rs  debounce.rs  dedupe.rs  lib.rs  priority.rs
crates/photasa-wenchang-preferences/: Cargo.toml
crates/photasa-wenchang-preferences/src/: lib.rs
crates/zouwu-core/: Cargo.toml
crates/zouwu-core/src/: adapter.rs  builtin_ops.rs  engine.rs  expression.rs  lib.rs  parser.rs  types.rs
crates/zouwu-core/tests/: integration_test.rs
docs/: DEBUG.md  DEBUG_MCP.md  DESIGN.md  DEV_GUIDE.md  README.md  _sidebar.md  config-storage-diagram.md  config-system.md  dev.md  index.html  photo-import-design.md
electron-app/: package-lock.json  package.json
resources/: splash.css  splash.html  splash.js
scripts/: download-flags.js  generate-release-please-config.mjs  generate-sha512.js  husky-clippy-if-rust-staged.sh  husky-version-align-if-version-staged.sh  install-ffmpeg.js  rfc-manager.js  sync-workspace-version.mjs  validate-workflows.ts  verify-ffmpeg.js
test/: setup.main.jest.ts  setup.main.ts  setup.renderer.ts  setup.ts  vite-node-worker.d.ts
tests/: index.html  test-helper.js
(+1766 files in other folders)
