[workspace]
resolver = "2"
members = [
    "crates/zouwu-core",
    "crates/zouwu-builtin",
    "crates/libheif-sys",
    "crates/photasa-preference",
    "crates/photasa-import",
    "crates/photasa-thumbnail",
    "crates/photasa-types",
    "crates/photasa-scan",
    "crates/photasa-watch",
    "crates/photasa-config",
    "crates/photasa-media",
    "crates/photasa-folder-tree",
    "apps/photasa/src-tauri",
]

[patch.crates-io]
libheif-sys = { path = "crates/libheif-sys" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
pest = "2"
pest_derive = "2"
zouwu-core = { path = "crates/zouwu-core" }
zouwu-builtin = { path = "crates/zouwu-builtin" }
photasa-preference = { path = "crates/photasa-preference" }
photasa-import = { path = "crates/photasa-import" }
photasa-thumbnail = { path = "crates/photasa-thumbnail" }
photasa-types = { path = "crates/photasa-types" }
photasa-scan = { path = "crates/photasa-scan" }
photasa-watch = { path = "crates/photasa-watch" }
photasa-media = { path = "crates/photasa-media" }
photasa-config = { path = "crates/photasa-config" }
photasa-folder-tree = { path = "crates/photasa-folder-tree" }
