[package]
name = "photasa-folder-tree"
version = "2.0.0"
edition = "2021"
description = "Sidebar folder tree persistence (~/.photasa/appState/photasa.json); Tauri service: Siming"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
tempfile = "3"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[lints.rust]
warnings = "warn"
[lints.clippy]
all = "warn"
