[package]
name = "photasa-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
photasa-import = { workspace = true }
photasa-thumbnail = { workspace = true }
photasa-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
walkdir = "2.0"

[dev-dependencies]
filetime = "0.2"
uuid = { version = "1.0", features = ["v4"] }

[lints.rust]
warnings = "warn"
[lints.clippy]
all = "warn"
