[package]
name = "zouwu-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
futures = "0.3"
