[package]
name = "photasa"
version = "0.1.0"
description = "Photasa - A Tauri-based photo manager"
authors = ["Albert Li <albert_lee@hotmail.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "shell-open",
    "dialog-all",
    "fs-all",
    "path-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
image = "0.24"
walkdir = "2.0"
notify = "6.0"
wasmtime = { version = "20.0", features = ["async"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
