[package]
name = "photasa"
version = "0.1.0"
description = "Photasa - A Tauri-based photo manager"
authors = ["Albert Li <albert_lee@hotmail.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# workspace crates
zouwu-core = { path = "../../../crates/zouwu-core" }
zouwu-builtin = { path = "../../../crates/zouwu-builtin" }
photasa-wenchang-preferences = { path = "../../../crates/photasa-wenchang-preferences" }

# workspace 共享依赖
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

# Tauri 相关
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-updater = "2.0"

# 其他依赖
anyhow = "1.0"
image = "0.25"
kamadak-exif = "0.6"
md-5 = "0.10"
libheif-rs = { version = "2.7.0", features = ["image", "embedded-libheif"] }
regex = "1"
walkdir = "2.0"
notify = "6.0"
glob = "0.3"
pathdiff = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
filetime = "0.2"
log = "0.4"
async-trait = { workspace = true }
tauri-plugin-mcp-bridge = "0.10.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
# 视频元数据与缩略图：自包含 — 编译期由 ffmpeg-sys-next 构建并静态链接 FFmpeg（不依赖系统安装的 ffmpeg / pkg-config）
ffmpeg-next = { version = "8.1", default-features = false, features = ["build", "build-zlib", "format", "codec", "software-scaling"] }

# Clippy：all 启用常规检查；脚本中 -D warnings 将警告视为错误
[lints.rust]
warnings = "warn"
[lints.clippy]
all = "warn"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
